Cambios en el carrito

--- a/views/product/productDetail.ejs
+++ b/views/product/productDetail.ejs
@@ -48,26 +48,22 @@
                         <label class="quantity-label" for="botella500"><input type="checkbox" id="botella500"
                                 value="botella500">Lata 500 ml</label>
                         <h5>$ 300</h5>
-                        <div class="pd-counter">
-                            
+                        <!-- <div class="pd-counter">
                             <input type="number" class="pc-shopping-cart-quantity-input " step="1" min="0" max="50" name="quantity"
                                 value="0" title="Cantidad" size="4" placeholder="" inputmode="numeric">
-                            
-                        </div>
+                        </div> -->
                         
                     </div>
                    
-                    <div class="pd-quantity">
+                    <!-- <div class="pd-quantity">
                         <label class="quantity-label" for="pack61l"><input type="checkbox" id="pack61l"
                                 value="pack61l">Pack x 6 - 500 ml</label>
                         <h5>$ 3500</h5>
                         <div class="pd-counter">
-                            
                             <input type="number" class="pc-shopping-cart-quantity-input " step="1" min="0" max="17" name="quantity"
                                 value="0" title="Cantidad" size="4" placeholder="" inputmode="numeric">
-                            
                         </div>
-                    </div>
+                    </div> -->
                 </form>
             </div>
 
