--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -84,13 +84,13 @@
        
         <div>
             <label><h3>LOGIN DE USUARIO</h3></label>
-            <div class="lg-div-login lg-input">
+            <!-- <div class="lg-div-login lg-input">
                 <div id="gSignInWrapper">
                     <button class="lg-button g-signin2" style="width: 100%" id="customBtn" data-onsuccess="onSignIn"><i class="fa-brands fa-google customGPlusSignIn"> Ingresar con Google </i></button>
                 </div>
                 <div id="name"></div>
                 <script>startApp();</script>
-                <button class="lg-button " style="width: 100%"><i class="fa-brands fa-facebook-f"> Ingresar con Facebook </i></button>
+                <button class="lg-button " style="width: 100%"><i class="fa-brands fa-facebook-f"> Ingresar con Facebook </i></button> -->
                 <!-- <fb:login-button 
                     scope="public_profile,email"
                     onlogin="checkLoginState();">
