corrección en tipeo de mensajes

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -11,10 +11,11 @@
         </ul>
         <ul class="footer-social-media">
             <li>Contacto</li>
+            <br>
             <li><a href="https://api.whatsapp.com/send?phone=+5491128590700&text=Hola%20quiero%20una%20cerveza=)." target="_blank">  +54 9 11 12344567<i class="fab fa-whatsapp"></i></a></li>
             <li><a href="https://instagram.com/chec.cerveceria?utm_medium=copy_link" target="_blank"> @cervezaChec<i class="fab fa-instagram"></i></a></li>
-            <li><a href="" >  /checCerveceria<i class="fab fa-facebook"></i></a></li>
-            <li><a href="" ></i>  chec@cerveza.com.ar<i class="far fa-envelope"></i></a></li>
+            <!-- <li><a href="" >  /checCerveceria<i class="fab fa-facebook"></i></a></li>
+            <li><a href="" ></i>  chec@cerveza.com.ar<i class="far fa-envelope"></i></a></li> -->
         </ul>
     </div>
     <div class="copyright">
