--- a/views/enDesarrollo.ejs
+++ b/views/enDesarrollo.ejs
@@ -7,7 +7,7 @@
     <%- include("./partials/header") %>
     <div class="content"></div>
         <div class="enDesarrollo">
-            <h1>404 - Nada por aca</h1>
+            <h1>404 - Nada por acá.</h1>
             <h1>¯\_(ツ)_/¯</h1>
         </div>
     </div>
