--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -102,19 +102,22 @@
                 <div>
                     <label>Email</label>
                     <input type="email" name="email" id="email" class="lg-input">  
-                    <% if (locals.errors && errors.email) { %>                  
-                        <%= errors.email.msg %>
-                    <% } %>
-                        <div class="text-danger" id="msgFront_email"></div>
+                    <div class="text-danger" id="msgFront_email">
+                        <% if (locals.errors && errors.email) { %> 
+                                <%= errors.email.msg %>                            
+                        <% } %>
+                    </div>                 
+                            
                     
                 </div>
                 <div>
                     <label>Constraseña</label>
                     <input type="password" name="password" id="password" class="lg-input">
-                    <% if (locals.errors && errors.password) { %>
-                        <div class="text-danger" id="msgFront_password"></div>
-                        <%= errors.password.msg %>
-                    <% } %>
+                    <div class="text-danger" id="msgFront_password">
+                        <% if (locals.errors && errors.password) { %>
+                                <%= errors.password.msg %>                            
+                        <% } %>
+                    </div>
                 </div>
                 <div>
                     <label>
