fix: corregido el error que no permitia registrar usuarios

--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -128,7 +128,7 @@
                     <label><b>Imagen de perfil (opcional)</b></label>
                     <img src="https://res.cloudinary.com/ds0upcco9/image/upload/v1659118673/images/avatars/default_img_wmlytg.png" class="rg-img-profile" id="imageProfile" alt="">
                     <input type="button" id="avatar" class="rg-btn-avatar" value="Seleccionar Imagen">
-                    <input type="hidden" name="oldAvatar" id="hiddenAvatar" value="'https://res.cloudinary.com/ds0upcco9/image/upload/v1659118673/images/avatars/default_img_wmlytg.png'">
+                    <input type="hidden" name="oldAvatar" id="hiddenAvatar" value="https://res.cloudinary.com/ds0upcco9/image/upload/v1659118673/images/avatars/default_img_wmlytg.png">
                     <br>
                 </div>
             </div>
